# kvm-bindings

./: .gitignore  .platform  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_serde.rs  coverage_config_aarch64.json  coverage_config_x86_64.json
.buildkite/: custom-tests.json  pipeline.yml
.cargo/: config
docs/: serialization.md
serialization/: header.rs.txt  template.rs.txt
src/: lib.rs
src/arm/: bindings_v4_20_0.rs  mod.rs
src/arm64/: bindings.rs  bindings_v4_20_0.rs  mod.rs  serialize.rs
src/riscv/: bindings.rs  mod.rs
src/x86/: bindings.rs  bindings_v4_14_0.rs  bindings_v4_20_0.rs  fam_wrappers.rs  mod.rs  serde.rs  serializers.rs
src/x86_64/: bindings.rs  fam_wrappers.rs  mod.rs  serialize.rs
tools/: add_serde.py
