[package]
name = "kvm-bindings"
version = "0.1.1"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[features]
kvm-v4_14_0 = []
kvm-v4_20_0 = []
with-serde = ["serde", "vmm-serde/serde_derive_ffi"]

[dependencies]
serde = { version = "1.0", optional = true }
vmm-serde = { git = "https://github.com/jiangliu/vmm-serde", branch = "v1" }

[dev-dependencies]
serde_json = "1.0"
